[gd_scene load_steps=39 format=3 uid="uid://bgj726r0ubr21"]

[ext_resource type="Script" path="res://scenes/rooms/scr_room_store.gd" id="1_4louq"]
[ext_resource type="PackedScene" uid="uid://7v6bq0p8ea7t" path="res://scenes/scn_interior_tiles.tscn" id="2_bdr84"]
[ext_resource type="PackedScene" uid="uid://dx3mkrjbqpref" path="res://scenes/characters/overworld/scn_greg_overworld.tscn" id="3_p4n0p"]
[ext_resource type="PackedScene" uid="uid://ekxwo70dmot1" path="res://scenes/tech/scn_camera.tscn" id="4_t0r6d"]
[ext_resource type="PackedScene" uid="uid://emxihek3ybla" path="res://scenes/decor/scn_store_shelf.tscn" id="5_hc7sm"]
[ext_resource type="Texture2D" uid="uid://cxe3cfr8tnyjl" path="res://sprites/world/building/spr_indoors.png" id="7_em34h"]
[ext_resource type="PackedScene" uid="uid://xk5mtrl26xyo" path="res://scenes/characters/overworld/scn_overworld_character.tscn" id="8_0h0ea"]
[ext_resource type="Texture2D" uid="uid://dmj7p3bkessb1" path="res://sprites/world/object/store_shelves/spr_huge.png" id="8_wqnbd"]
[ext_resource type="Texture2D" uid="uid://2d78w26thrn4" path="res://sprites/world/object/store_shelves/spr_cold.png" id="9_72vyo"]
[ext_resource type="SpriteFrames" uid="uid://d1gv8oqbnw55i" path="res://resources/characters/sfr_cashier_nice.tres" id="9_sx45w"]
[ext_resource type="Texture2D" uid="uid://vm5q5pq4pmlu" path="res://sprites/characters/overworld/spr_cashier_mean_overworld.png" id="10_dra8p"]
[ext_resource type="Texture2D" uid="uid://cjk8066vwnmqn" path="res://sprites/world/object/store_shelves/spr_cold_2.png" id="10_mv0v3"]
[ext_resource type="PackedScene" uid="uid://j12da57vuv2v" path="res://scenes/tech/scn_interaction_area.tscn" id="10_nn5u3"]
[ext_resource type="Material" uid="uid://lhbmu3wa1ggo" path="res://resources/characters/ppm_cashier_mean.tres" id="10_pghuq"]
[ext_resource type="PackedScene" uid="uid://bbsyh4m7x7uhg" path="res://scenes/tech/scn_room_gate.tscn" id="11_jnio5"]
[ext_resource type="Theme" uid="uid://wknpxv3x21lw" path="res://resources/thm_main_ui.tres" id="12_mfggk"]
[ext_resource type="SpriteFrames" uid="uid://du74aw0jrys3e" path="res://resources/characters/sfr_neighbour_wife.tres" id="15_70cgv"]
[ext_resource type="Script" path="res://scenes/rooms/store/scr_decor.gd" id="18_8t4i1"]
[ext_resource type="Texture2D" uid="uid://ceukg4w8cdlw0" path="res://sprites/world/object/store_shelves/spr_plant.png" id="18_aqsfi"]
[ext_resource type="Texture2D" uid="uid://bnvnuppg0j2rd" path="res://sprites/world/object/store_shelves/spr_products_pile.png" id="19_d71lm"]
[ext_resource type="Script" path="res://scenes/tech/scr_inspect_area.gd" id="20_r2fhk"]
[ext_resource type="Texture2D" uid="uid://jp5n47pb8wf3" path="res://sprites/world/object/store_shelves/spr_wet_floor.png" id="22_5c2h3"]
[ext_resource type="Script" path="res://code/scr_cheat_node.gd" id="22_qf0t1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e3ktr"]
atlas = ExtResource("10_dra8p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="Animation" id="Animation_2fxen"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_o4503"]
resource_name = "hover"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1hrc5"]
_data = {
"RESET": SubResource("Animation_2fxen"),
"hover": SubResource("Animation_o4503")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v231s"]
size = Vector2(34, 40)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_scfas"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lvxqb"]
normal = Vector2(0, 1)
distance = 1.5

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_w00jd"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_p35a2"]
normal = Vector2(-1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_has6e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3amur"]
size = Vector2(30, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5lum"]
size = Vector2(28, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jo5nt"]
size = Vector2(26, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_on3r1"]
size = Vector2(24, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dcyjw"]
size = Vector2(28, 24)

[node name="Store" type="Node2D" groups=["save_me"]]
y_sort_enabled = true
script = ExtResource("1_4louq")

[node name="InteriorTiles" parent="." instance=ExtResource("2_bdr84")]
z_index = -1
layer_0/tile_data = PackedInt32Array(-262150, 1, 0, -196614, 1, 0, -131078, 1, 0, -65542, 1, 0, -6, 1, 0, 65530, 1, 0, 131066, 1, 0, 196602, 1, 0, 262138, 1, 0, 327674, 1, 0, -262149, 1, 0, -196613, 1, 0, -131077, 1, 0, -65541, 1, 0, -5, 1, 0, 65531, 1, 0, 131067, 1, 0, 196603, 1, 0, 262139, 1, 0, 327675, 1, 0, -262148, 1, 0, -196612, 1, 0, -131076, 1, 0, -65540, 1, 0, -4, 1, 0, 65532, 1, 0, 131068, 1, 0, 196604, 1, 0, 262140, 1, 0, 327676, 1, 0, -262147, 1, 0, -196611, 1, 0, -131075, 1, 0, -65539, 1, 0, -3, 1, 0, 65533, 1, 0, 131069, 1, 0, 196605, 1, 0, 262141, 1, 0, 327677, 1, 0, -262146, 1, 0, -196610, 1, 0, -131074, 1, 0, -65538, 1, 0, -2, 1, 0, 65534, 1, 0, 131070, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, -262145, 1, 0, -196609, 1, 0, -131073, 1, 0, -65537, 1, 0, -1, 1, 0, 65535, 1, 0, 131071, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 196609, 3, -327680, 1, 0, -262144, 1, 0, -196608, 1, 0, -131072, 1, 0, -65536, 1, 0, 0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 327681, 3, -327679, 1, 0, -262143, 1, 0, -196607, 1, 0, -131071, 1, 0, -65535, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, -327678, 1, 0, -262142, 1, 0, -196606, 1, 0, -131070, 1, 0, -65534, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, -327677, 1, 0, -262141, 1, 0, -196605, 1, 0, -131069, 1, 0, -65533, 1, 0, 3, 1, 0, 65539, 1, 0, 131075, 1, 0, 196611, 1, 0, 262147, 1, 0, -327676, 1, 0, -262140, 1, 0, -196604, 1, 0, -131068, 1, 0, -65532, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 1, 0, 196612, 1, 0, 262148, 1, 0, 262149, 1, 0, 196613, 1, 0, 131077, 1, 0, 65541, 1, 0, 5, 1, 0, -65530, 1, 0, -131066, 1, 0, -196602, 1, 0, -262138, 1, 0, -327674, 1, 0, -327675, 1, 0, -262139, 1, 0, -196603, 1, 0, -131067, 1, 0, -65531, 1, 0, 262150, 1, 0, 196614, 1, 0, 131078, 1, 0, 65542, 1, 0, 6, 1, 0, -262151, 1, 0, -196615, 1, 0, -131079, 1, 0, -65543, 1, 0, -7, 1, 0, 65529, 1, 0, 131065, 1, 0, 196601, 1, 0, 262137, 1, 0, 327673, 1, 0)
layer_1/tile_data = PackedInt32Array(-393223, 983041, 3, -393222, 983041, 3, -393221, 983041, 3, -393220, 983041, 3, -393219, 983041, 3, -393218, 983041, 3, -393217, 983041, 3, -458752, 983041, 3, -458751, 983041, 3, -458750, 983041, 3, -458749, 983041, 3, -458748, 983041, 3, -458747, 983041, 3, -458746, 983041, 3, -458745, 720897, 2, -393209, 917505, 1, -327673, 917505, 1, -262137, 917505, 1, -196601, 917505, 1, -131065, 917505, 1, -131064, 1114113, 2, -65528, 1114113, 2, 8, 1114113, 2, 65544, 1114113, 2, 65543, 917505, 1, 7, 917505, 1, -65529, 917505, 1, 131079, 917505, 1, 196615, 917505, 1, 262151, 917505, 1, 327687, 720897, 1, 327686, 1048577, 0, 327685, 1048577, 0, 327684, 1048577, 0, 327683, 1048577, 0, 327682, 1048577, 0, 327681, 1048577, 0, 327680, 786433, 1, 393215, 720897, 1, 393214, 1048577, 0, 393213, 1048577, 0, 393212, 1048577, 0, 393211, 1048577, 0, 393210, 1048577, 0, 393209, 1048577, 0, 393208, 786433, 1, 327672, 1114113, 2, 262136, 1114113, 2, 262135, 917505, 1, 327671, 917505, 1, 393207, 917505, 1, 458743, 917505, 3, 196599, 917505, 1, 131063, 917505, 1, 65527, 917505, 1, -9, 917505, 1, -65545, 917505, 1, -65544, 1114113, 2, -8, 1114113, 2, 65528, 1114113, 2, 131064, 1114113, 2, 196600, 1114113, 2, -131081, 917505, 1, -196617, 917505, 1, -262153, 917505, 1, -327689, 917505, 1, -393225, 917505, 1, -393224, 786433, 2, -327688, 1114113, 2, -262152, 1114113, 2, -196616, 1114113, 2, -131080, 1114113, 2, -458761, 917505, 0, -458760, 1048577, 0, -458759, 1048577, 0, -458758, 1048577, 0, -458757, 1048577, 0, -458756, 1048577, 0, -458755, 1048577, 0, -458754, 1048577, 0, -458753, 1048577, 0, -524288, 1048577, 0, -524287, 1048577, 0, -524286, 1048577, 0, -524285, 1048577, 0, -524284, 1048577, 0, -524283, 1048577, 0, -524282, 1048577, 0, -524281, 1048577, 0, -524280, 1114113, 0, -458744, 1114113, 2, -393208, 1114113, 2, -327672, 1114113, 2, -262136, 1114113, 2, -196600, 1114113, 2, 131080, 1114113, 2, 196616, 1114113, 2, 262152, 1114113, 2, 327688, 1114113, 2, 393224, 1114113, 3, 393223, 983041, 3, 393222, 983041, 3, 393221, 983041, 3, 393220, 983041, 3, 393219, 983041, 3, 393218, 983041, 3, 393217, 983041, 3, 393216, 983041, 3, 458751, 983041, 3, 458750, 983041, 3, 458749, 983041, 3, 458748, 983041, 3, 458747, 983041, 3, 458746, 983041, 3, 458745, 983041, 3, 458744, 983041, 3)

[node name="Greg" parent="." instance=ExtResource("3_p4n0p")]
position = Vector2(22, 40)

[node name="Camera" parent="Greg" instance=ExtResource("4_t0r6d")]
position = Vector2(0, -11)
limit_left = -128
limit_top = -112
limit_right = 128
limit_bottom = 96

[node name="Shelves" type="Node2D" parent="."]
y_sort_enabled = true

[node name="StoreShelf" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(16, -48)

[node name="StoreShelf2" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(48, -48)

[node name="StoreShelf3" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(80, -48)

[node name="StoreShelf4" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(16, -16)

[node name="StoreShelf5" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(48, -16)

[node name="StoreShelf6" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(80, -16)

[node name="StoreShelf7" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(16, 16)

[node name="StoreShelf8" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(48, 16)

[node name="StoreShelf9" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(80, 16)

[node name="StoreShelf13" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(-62, -48)
hide_image = true

[node name="Sprite2D" type="Sprite2D" parent="Shelves/StoreShelf13"]
show_behind_parent = true
position = Vector2(-10, -20)
texture = ExtResource("8_wqnbd")
centered = false

[node name="StoreShelf14" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(-39, -48)
hide_image = true

[node name="StoreShelf15" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(-16, -48)
hide_image = true

[node name="StoreShelf16" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(-62, -16)
hide_image = true

[node name="Sprite2D" type="Sprite2D" parent="Shelves/StoreShelf16"]
show_behind_parent = true
position = Vector2(-10, -20)
texture = ExtResource("8_wqnbd")
centered = false

[node name="StoreShelf17" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(-39, -16)
hide_image = true

[node name="StoreShelf18" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(-16, -16)
hide_image = true

[node name="StoreShelf19" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(-62, -80)
hide_image = true
cold = true

[node name="Sprite2D" type="Sprite2D" parent="Shelves/StoreShelf19"]
show_behind_parent = true
position = Vector2(-10, -20)
texture = ExtResource("9_72vyo")
centered = false

[node name="StoreShelf20" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(-39, -80)
hide_image = true
cold = true

[node name="StoreShelf21" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(-17, -80)
hide_image = true
cold = true

[node name="Sprite2D2" type="Sprite2D" parent="Shelves/StoreShelf21"]
position = Vector2(-55, -20)
texture = ExtResource("10_mv0v3")
centered = false

[node name="StoreShelf22" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(16, -80)

[node name="StoreShelf23" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(48, -80)

[node name="StoreShelf24" parent="Shelves" instance=ExtResource("5_hc7sm")]
position = Vector2(80, -80)

[node name="Kassa" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(-99, 23)

[node name="Sprite2D" type="Sprite2D" parent="Kassa"]
position = Vector2(0, 9)
texture = ExtResource("7_em34h")
offset = Vector2(0, -7)
region_enabled = true
region_rect = Rect2(0, 66, 26, 14)

[node name="Sprite2D2" type="Sprite2D" parent="Kassa"]
position = Vector2(-9, -13)
texture = ExtResource("7_em34h")
offset = Vector2(9, -1)
region_enabled = true
region_rect = Rect2(0, 48, 26, 18)

[node name="Collision" type="StaticBody2D" parent="Kassa"]
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Kassa/Collision"]
polygon = PackedVector2Array(-13, 9, 13, 9, 13, -23, -13, -23, -13, -13, -6, -13, -6, -9, 3, -9, 3, 0, -13, 0)
metadata/_edit_lock_ = true

[node name="Cashier" parent="Kassa" node_paths=PackedStringArray("animated_sprite") instance=ExtResource("8_0h0ea")]
position = Vector2(-3, -5)
animated_sprite = NodePath("Sprite")
speed = 2000
random_movement = true

[node name="WLIParticles" type="GPUParticles2D" parent="Kassa/Cashier"]
visible = false
position = Vector2(0, -6)
process_material = ExtResource("10_pghuq")
texture = SubResource("AtlasTexture_e3ktr")
fixed_fps = 60

[node name="Sprite" type="AnimatedSprite2D" parent="Kassa/Cashier"]
position = Vector2(0, -8)
sprite_frames = ExtResource("9_sx45w")
animation = &"walk_down"

[node name="HoverAnimation" type="AnimationPlayer" parent="Kassa/Cashier"]
libraries = {
"": SubResource("AnimationLibrary_1hrc5")
}

[node name="KassaSpeak" parent="Kassa" instance=ExtResource("10_nn5u3")]
modulate = Color(0.905882, 0.639216, 1, 1)
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kassa/KassaSpeak"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_v231s")

[node name="Collision" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2(0, 80)
shape = SubResource("WorldBoundaryShape2D_scfas")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Collision"]
position = Vector2(0, -82)
shape = SubResource("WorldBoundaryShape2D_lvxqb")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Collision"]
position = Vector2(-112, 1)
shape = SubResource("WorldBoundaryShape2D_w00jd")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Collision"]
position = Vector2(112, 7)
shape = SubResource("WorldBoundaryShape2D_p35a2")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Collision"]
position = Vector2(-104, 79)
shape = SubResource("RectangleShape2D_has6e")

[node name="RoomGate" parent="." instance=ExtResource("11_jnio5")]
position = Vector2(0, 79)
destination = &"town"
gate_id = &"store_inside-outside"
extents = Vector2i(12, 2)
spawnpoint = Vector2i(0, -13)

[node name="StoreUi" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 120.0
theme = ExtResource("12_mfggk")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="ShoppingList" type="RichTextLabel" parent="StoreUi"]
modulate = Color(1, 1, 1, 0.701961)
layout_mode = 0
offset_left = 64.0
offset_right = 159.0
offset_bottom = 119.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.109804)
theme_override_constants/outline_size = 2
bbcode_enabled = true
text = "[right]gummy worm x 10
sugar lemon x 3
porridge x 3"
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="StealingArea" type="Area2D" parent="."]
position = Vector2(0, 72)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StealingArea"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_3amur")
debug_color = Color(0.662745, 0.611765, 1, 0.419608)

[node name="Decor" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("18_8t4i1")

[node name="Plant" type="Sprite2D" parent="Decor"]
position = Vector2(-104, 74)
texture = ExtResource("18_aqsfi")
offset = Vector2(0, -14)

[node name="InspectArea" type="Area2D" parent="Decor/Plant"]
position = Vector2(3, 6)
script = ExtResource("20_r2fhk")
key = "store_plant"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Decor/Plant/InspectArea"]
position = Vector2(-6, -1)
shape = SubResource("RectangleShape2D_n5lum")

[node name="Products\'s" type="Sprite2D" parent="Decor" groups=["products"]]
position = Vector2(97, 47)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s2" type="Sprite2D" parent="Decor/Products\'s"]
position = Vector2(-13, 0)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s3" type="Sprite2D" parent="Decor/Products\'s"]
position = Vector2(-12, 9)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s4" type="Sprite2D" parent="Decor/Products\'s"]
position = Vector2(1, 9)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="InspectArea" type="Area2D" parent="Decor/Products\'s"]
script = ExtResource("20_r2fhk")
key = "store_products_pile"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Decor/Products\'s/InspectArea"]
position = Vector2(-6, -1)
shape = SubResource("RectangleShape2D_n5lum")

[node name="StaticBody2D" type="StaticBody2D" parent="Decor/Products\'s"]

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Decor/Products\'s/StaticBody2D"]
position = Vector2(-6, -1)
shape = SubResource("RectangleShape2D_jo5nt")

[node name="Products\'s2" type="Sprite2D" parent="Decor" groups=["products"]]
position = Vector2(-90, -72)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s2" type="Sprite2D" parent="Decor/Products\'s2"]
position = Vector2(-13, 0)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s3" type="Sprite2D" parent="Decor/Products\'s2"]
position = Vector2(-12, 9)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s4" type="Sprite2D" parent="Decor/Products\'s2"]
position = Vector2(1, 9)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="InspectArea" type="Area2D" parent="Decor/Products\'s2"]
script = ExtResource("20_r2fhk")
key = "store_products_pile"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Decor/Products\'s2/InspectArea"]
position = Vector2(-6, -1)
shape = SubResource("RectangleShape2D_n5lum")

[node name="StaticBody2D" type="StaticBody2D" parent="Decor/Products\'s2"]

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Decor/Products\'s2/StaticBody2D"]
position = Vector2(-6, -1)
shape = SubResource("RectangleShape2D_jo5nt")

[node name="Products\'s3" type="Sprite2D" parent="Decor" groups=["products"]]
position = Vector2(67, 49)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s2" type="Sprite2D" parent="Decor/Products\'s3"]
position = Vector2(-13, 0)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s3" type="Sprite2D" parent="Decor/Products\'s3"]
position = Vector2(-12, 9)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s4" type="Sprite2D" parent="Decor/Products\'s3"]
position = Vector2(1, 9)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="InspectArea" type="Area2D" parent="Decor/Products\'s3"]
script = ExtResource("20_r2fhk")
key = "store_products_pile"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Decor/Products\'s3/InspectArea"]
position = Vector2(-6, -1)
shape = SubResource("RectangleShape2D_n5lum")

[node name="StaticBody2D" type="StaticBody2D" parent="Decor/Products\'s3"]

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Decor/Products\'s3/StaticBody2D"]
position = Vector2(-6, -1)
shape = SubResource("RectangleShape2D_jo5nt")

[node name="Products\'s4" type="Sprite2D" parent="Decor" groups=["products"]]
position = Vector2(100, 67)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s2" type="Sprite2D" parent="Decor/Products\'s4"]
position = Vector2(-13, 0)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s3" type="Sprite2D" parent="Decor/Products\'s4"]
position = Vector2(-12, 9)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="Products\'s4" type="Sprite2D" parent="Decor/Products\'s4"]
position = Vector2(1, 9)
texture = ExtResource("19_d71lm")
offset = Vector2(0, -16)

[node name="InspectArea" type="Area2D" parent="Decor/Products\'s4"]
script = ExtResource("20_r2fhk")
key = "store_products_pile"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Decor/Products\'s4/InspectArea"]
position = Vector2(-6, -1)
shape = SubResource("RectangleShape2D_n5lum")

[node name="StaticBody2D" type="StaticBody2D" parent="Decor/Products\'s4"]

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Decor/Products\'s4/StaticBody2D"]
position = Vector2(-6, -1)
shape = SubResource("RectangleShape2D_jo5nt")

[node name="NeighbourWife" parent="Decor" node_paths=PackedStringArray("animated_sprite") instance=ExtResource("8_0h0ea")]
position = Vector2(93, -35)
animated_sprite = NodePath("AnimatedSprite2D")
default_lines = Array[StringName]([&"neighbour_wife_talk_store_1", &"neighbour_wife_talk_4"])
save_convo_progess = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Decor/NeighbourWife"]
position = Vector2(0, -8)
sprite_frames = ExtResource("15_70cgv")
animation = &"walk_down"
frame_progress = 0.826367

[node name="FunnyArea" type="Area2D" parent="Decor"]
y_sort_enabled = true
position = Vector2(-62, 65)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Decor/FunnyArea"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_on3r1")

[node name="Sprite2D" type="Sprite2D" parent="Decor/FunnyArea"]
texture = ExtResource("22_5c2h3")

[node name="InspectArea" type="Area2D" parent="Decor/FunnyArea"]
script = ExtResource("20_r2fhk")
key = "wet_floor"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Decor/FunnyArea/InspectArea"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_dcyjw")

[node name="CheatNode" type="Node" parent="."]
script = ExtResource("22_qf0t1")
level_gain = 39
force_spirits_into_use = true
add_seconds = 500

[connection signal="on_interact" from="Kassa/KassaSpeak" to="." method="_on_kassa_speak_on_interact"]
[connection signal="entered" from="RoomGate" to="." method="_on_room_gate_entered"]
[connection signal="body_entered" from="StealingArea" to="." method="_on_stealing_area_entered"]
